# glyph

./: .editorconfig  .gitignore  .luacheckrc  .luarc.json  Cargo.toml  Justfile  LICENSE  README.md  ROADMAP.md  config.toml  rust-toolchain.toml  rustfmt.toml  stylua.toml  thoughts.md
.github/workflows/: coverage.yml
config/: glyph.toml  theme.toml
config/themes/: glyph-dark-default.toml  glyph-default-dark.toml  glyph-default-light.toml  glyph-light-default.toml  kanagawa-dragon.toml
crates/config/: Cargo.toml
crates/config/src/: config.rs  default_config.rs  lib.rs
crates/glyph/: Cargo.toml
crates/glyph/src/: command.rs  config.rs  cursor.rs  editor.rs  events.rs  highlight.rs  main.rs  view.rs  viewport.rs  window.rs
crates/glyph/src/buffer/: buffer.rs  lines.rs  marker.rs  mod.rs  vec_marker.rs
crates/glyph/src/config/: mod.rs
crates/glyph/src/frame/: cell.rs  mod.rs
crates/glyph/src/lsp/: mod.rs
crates/glyph/src/pane/: cursor.rs  mod.rs  pane.rs
crates/glyph/src/pane/gutter/: absolute_line_gutter.rs  mod.rs  noop_line_gutter.rs  relative_line_gutter.rs
crates/glyph/src/pane/line_drawer/: absolute_line_drawer.rs  relative_line_drawer.rs
crates/glyph/src/theme/: loader.rs  mod.rs
crates/glyph/src/tui/: buffer.rs  commandline.rs  mod.rs  statusline.rs
crates/glyph/src/tui/gutter/: absolute_line_gutter.rs  mod.rs  noop_line_gutter.rs  relative_line_gutter.rs
crates/logger/: Cargo.toml
crates/logger/src/: file_logger.rs  lib.rs  log_level.rs  logger_error.rs  macros.rs  stdout_logger.rs  writable.rs
crates/lsp/: Cargo.toml
crates/text_object/: Cargo.toml
crates/text_object/src/: lib.rs  marker.rs  text_object.rs  vec_marker.rs
crates/theme/: Cargo.toml
crates/theme/src/: default_dark.rs  default_light.rs  lib.rs  loader.rs  theme.rs
glyph/: Cargo.toml
glyph-config/: Cargo.toml
glyph-config/src/: dirs.rs  error.rs  lib.rs  lua.rs  unresolved_config.rs
glyph-core/: Cargo.toml
glyph-core/src/: buffer_manager.rs  color.rs  command.rs  command_handler.rs  config.rs  cursor.rs  dirs.rs  document.rs  editing_plugin.rs  editor.rs  error.rs  fs.rs  geometry.rs  highlights.rs  key_mapper.rs  lib.rs  rect.rs  startup_options.rs  status_provider.rs  syntax.rs  tab.rs  tree.rs  view_manager.rs  window.rs
glyph-core/src/command/: mod.rs
glyph-core/src/command_handler/: buffer_command_handler.rs  file_command_handler.rs  mod.rs
glyph-core/src/event_loop/: error.rs  event.rs  mod.rs
glyph-core/src/key_mapper/: mod.rs  vim_key_mapper.rs  vsc_key_mapper.rs
glyph-core/src/renderer/: error.rs  mod.rs
glyph-core/src/text_object/: mod.rs
glyph-plugin/: Cargo.toml
glyph-plugin/src/: lib.rs
glyph-runtime/: Cargo.toml
glyph-runtime/src/: colors.rs  document.rs  editor.rs  error.rs  keymap.rs  lib.rs  statusline.rs  window.rs
glyph-runtime/src/api/: colors.rs  command.rs  editor.rs  keymap.rs  mod.rs  window.rs
glyph-runtime/src/config/: cursor.rs  gutter.rs  keymap.rs  mod.rs  statusline.rs
glyph-term/: Cargo.toml
glyph-term/benches/: digits_in_number.rs
glyph-term/src/: buffer.rs  graphics.rs  lib.rs  renderer.rs  terminal.rs
glyph-term/src/backend/: crossterm.rs  mod.rs
glyph-term/src/layers/: editor_layer.rs  mod.rs
glyph-term/src/ui/: line_number.rs  mod.rs
glyph-trie/: Cargo.toml
glyph-trie/src/: lib.rs  slab.rs
glyph-tui/: Cargo.toml
glyph-tui/src/: lib.rs
glyph-tui/src/backend/: crossterm.rs  mod.rs
glyph-vim/: Cargo.toml
glyph-vim/src/: command_handler.rs  key_mapper.rs  lib.rs  statusline.rs
glyph-vim/src/key_mapper/: command_mode_key_mapper.rs  insert_mode_key_mapper.rs  normal_mode_key_mapper.rs
glyph/src/: cursor.rs  document.rs  editor.rs  events.rs  glyph.rs  highlight.rs  main.rs  renderer.rs  tab.rs  tree.rs  view.rs  viewport.rs  window.rs
glyph/src/buffer/: lines.rs  marker.rs  mod.rs
glyph/src/config/: mod.rs
glyph/src/layers/: editor_layer.rs
glyph/src/lsp/: mod.rs
glyph/src/pane/: cursor.rs  mod.rs
glyph/src/pane/gutter/: absolute_line_gutter.rs  noop_line_gutter.rs  relative_line_gutter.rs
runtime/: colors.lua  init.lua  keymaps.lua  pretty_printer.lua  themes.lua  utils.lua
runtime/api/: colors.lua  command.lua  document.lua  editor.lua  init.lua  keymaps.lua  pretty_printer.lua  themes.lua  window.lua
runtime/cfg/: init.lua
runtime/defaults/: commands.lua  init.lua  options.lua  statusline.lua
runtime/defaults/keymaps/: init.lua  neovim.lua
runtime/defaults/options/: init.lua
runtime/defaults/themes/: init.lua  tokyodark.lua
runtime/plugins/: init.lua
runtime/plugins/explorer/: init.lua
runtime/themes/: default.lua  init.lua
src/: buffer.rs  command.rs  config.rs  cursor.rs  editor.rs  event_handler.rs  event_loop.rs  events.rs  highlight.rs  keyboard.rs  main.rs  pane.rs  renderer.rs  state.rs  view.rs  viewport.rs  window.rs
src/buffer/: buffer.rs  marker.rs  mod.rs  vec_marker.rs
src/commands/: backspace_command.rs  insert_line.rs  insert_line_below.rs  mod.rs  move_command.rs  quit_command.rs  type_command.rs
src/config/: mod.rs
src/frame/: cell.rs  change.rs  mod.rs
src/lsp/: mod.rs
src/pane/: absolute_line_drawer.rs  cursor.rs  line_drawer.rs  mod.rs  noop_line_drawer.rs  pane.rs  pane_dimension.rs  relative_line_drawer.rs
src/pane/gutter/: absolute_line_gutter.rs  mod.rs  noop_line_gutter.rs  relative_line_gutter.rs
src/pane/line_drawer/: absolute_line_drawer.rs  mod.rs
src/text_object/: marker.rs  mod.rs  vec_marker.rs
src/theme/: loader.rs  mod.rs
src/tui/: buffer.rs  commandline.rs  editor_window.rs  hover_popup.rs  layout.rs  mod.rs  position.rs  rect.rs  statusline.rs  themed.rs  tui_view.rs
src/tui/buffer/: focusable_buffer.rs  mod.rs  scrollable_buffer.rs
src/tui/gutter/: absolute_line_gutter.rs  mod.rs  noop_line_gutter.rs  relative_line_gutter.rs
