[workspace]
resolver = "2"
members = ["glyph-core"]

[workspace.dependencies]
# Internal dependencies
glyph-core = { path = "glyph-core" }

# External dependencies
thiserror = "2.0.12"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["wiru <hello@wiru.st>"]
license = "MIT"
repository = "https://github.com/wllfaria/glyph"

[package]
name = "scratch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
glyph-core.workspace = true
crossterm = "0.29.0"
eyre = "0.6.12"
color-eyre = "0.6.5"
