[workspace]
resolver = "2"
members = [
    "glyph-core",
    "glyph-config",
    "glyph-trie",
    "glyph-vim",
]

[workspace.dependencies]
# Internal dependencies
glyph-core = { path = "glyph-core" }
glyph-config = { path = "glyph-config" }
glyph-trie = { path = "glyph-trie" }
glyph-vim = { path = "glyph-vim" }

# External dependencies
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["wiru <hello@wiru.st>"]
license = "MIT"
repository = "https://github.com/wllfaria/glyph"

[package]
name = "scratch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
glyph-core.workspace = true
glyph-config.workspace = true
glyph-vim.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossterm = "0.29.0"
eyre = "0.6.12"
color-eyre = "0.6.5"