[package]
name = "glyph-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
glyph-core.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
thiserror.workspace = true
toml = "0.9.2"
