[package]
name = "glyph-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true

ropey = "1.6.1"
tree-sitter = "0.24.4"
tree-sitter-rust = "0.23.2"
streaming-iterator = "0.1.9"
tree-sitter-lua = "0.2.0"
tree-sitter-ocaml = "0.23.2"
tree-sitter-zig = "1.1.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-c = "0.23.4"
tree-sitter-md = "0.3.2"
