[package]
name = "glyph-term"
version = "0.1.0"
edition = "2021"

[dependencies]
glyph-core.workspace = true
glyph-config.workspace = true

tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

crossterm = { version = "0.28.1", features = ["event-stream"] }
slotmap = "1.0.7"
