[package]
name = "glyph-term"
version = "0.1.0"
edition = "2021"

[dependencies]
glyph-core.workspace = true
glyph-config.workspace = true
glyph-runtime.workspace = true

tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
mlua.workspace = true

crossterm = { version = "0.28.1", features = ["event-stream"] }
slotmap = "1.0.7"

[dev-dependencies]
divan = "0.1.16"

[[bench]]
name = "digits_in_number"
harness = false
