[package]
name = "glyph"
version = "0.1.0"
edition = "2021"

[dependencies]
glyph-core.workspace = true
glyph-term.workspace = true
glyph-config.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = { version = "0.3.31" }
