[package]
name = "glyph"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
logger.workspace = true
chrono.workspace = true
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
dirs = "5.0.1"

[[bin]]
name = "editor"
path = "src/main.rs"
