[package]
name = "glyph"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
logger.workspace = true
chrono.workspace = true
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
dirs = "5.0.1"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
futures-timer = "3.0.2"
futures = "0.3.30"
futures-util = "0.3.30"

[[bin]]
name = "gly"
path = "src/main.rs"
