[package]
name = "glyph"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gly"
path = "src/main.rs"

[dependencies]
config.workspace = true
lsp.workspace = true
text_object.workspace = true
theme.workspace = true

anyhow.workspace = true
toml.workspace = true
tracing.workspace = true
tokio.workspace = true
serde_json.workspace = true
crossterm.workspace = true
futures.workspace = true
futures-timer.workspace = true

tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
